<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".userInfo">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/halftone_yellow_light"
        android:layout_alignParentBottom="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/userInfo"
            android:fontFamily="@font/hand_type_writer"
            android:padding="8sp"
            android:textSize="15pt"
            android:layout_alignParentStart="true"
            android:background="@color/darkBlue"
            android:textColor="@color/offWhite"
            android:id="@+id/infoBanner"/>


        <TextView
            android:layout_width="160sp"
            android:layout_height="wrap_content"
            android:text="@string/firstName"
            android:fontFamily="@font/hand_type_writer"
            android:textSize="8pt"
            android:padding="10sp"
            android:layout_marginTop="25sp"
            android:background="@color/lightBlue"
            android:layout_below="@+id/infoBanner"
            android:textColor="@color/darkBlue"
            android:id="@+id/firstName"/>

        <TextView
            android:id="@+id/firstNameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/firstName"
            android:layout_toEndOf="@+id/firstName"
            android:background="@color/darkBlue"
            android:fontFamily="@font/hand_type_writer"
            android:padding="10sp"
            android:textColor="@color/offWhite"
            android:textSize="8pt" />

        <TextView
            android:layout_width="160sp"
            android:layout_height="wrap_content"
            android:text="@string/lastName"
            android:fontFamily="@font/hand_type_writer"
            android:textSize="8pt"
            android:padding="10sp"
            android:layout_marginTop="25sp"
            android:background="@color/lightBlue"
            android:textColor="@color/darkBlue"
            android:layout_below="@+id/firstName"
            android:id="@+id/lastName"/>

        <TextView
            android:id="@+id/lastNameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/lastName"
            android:layout_toEndOf="@+id/lastName"
            android:background="@color/darkBlue"
            android:fontFamily="@font/hand_type_writer"
            android:padding="10sp"
            android:textColor="@color/offWhite"
            android:textSize="8pt" />

        <TextView
            android:layout_width="160sp"
            android:layout_height="wrap_content"
            android:text="@string/userName"
            android:fontFamily="@font/hand_type_writer"
            android:textSize="8pt"
            android:padding="10sp"
            android:layout_marginTop="25sp"
            android:background="@color/lightBlue"
            android:textColor="@color/darkBlue"
            android:layout_below="@+id/lastName"
            android:id="@+id/userName"/>

        <TextView
            android:id="@+id/userNameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/userName"
            android:layout_toEndOf="@+id/userName"
            android:background="@color/darkBlue"
            android:fontFamily="@font/hand_type_writer"
            android:padding="10sp"
            android:textColor="@color/offWhite"
            android:textSize="8pt" />

        <TextView
            android:layout_width="160sp"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:fontFamily="@font/hand_type_writer"
            android:textSize="8pt"
            android:padding="10sp"
            android:layout_marginTop="25sp"
            android:background="@color/lightBlue"
            android:textColor="@color/darkBlue"
            android:layout_below="@+id/userName"
            android:id="@+id/location"/>

        <TextView
            android:id="@+id/locationField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/location"
            android:layout_toEndOf="@+id/location"
            android:background="@color/darkBlue"
            android:fontFamily="@font/hand_type_writer"
            android:padding="10sp"
            android:textColor="@color/offWhite"
            android:textSize="8pt" />

        <Button
            android:layout_width="140sp"
            android:layout_height="50sp"
            android:layout_alignParentEnd="true"
            android:background="@drawable/rounded_button"
            android:text="@string/done"
            android:textColor="@color/offWhite"
            android:textSize="10pt"
            android:fontFamily="@font/hand_type_writer"
            android:id="@+id/infoDoneButton"
            android:layout_alignParentBottom="true"/>

        <Button
            android:layout_width="140sp"
            android:layout_height="50sp"
            android:layout_marginTop="10sp"
            android:background="@drawable/rounded_button"
            android:text="@string/edit"
            android:textColor="@color/offWhite"
            android:textSize="10pt"
            android:fontFamily="@font/hand_type_writer"
            android:id="@+id/editButton"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>