<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/halftone_yellow_light">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/anagram_icon"
        tools:ignore="ContentDescription"
        android:adjustViewBounds="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:padding="10sp"
        android:id="@+id/logo"
        android:layout_marginTop="10sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/darkBlue"
            android:fontFamily="@font/hand_type_writer"
            android:textSize="25pt"
            android:id="@+id/logoText"
            android:layout_below="@+id/logo"
            android:layout_centerInParent="true" />

        <Button
            android:layout_width="220sp"
            android:layout_height="50sp"
            android:background="@drawable/rounded_button"
            android:text="@string/play"
            android:textColor="@color/offWhite"
            android:textSize="10pt"
            android:fontFamily="@font/hand_type_writer"
            android:id="@+id/playButton"
            android:layout_below="@id/logoText"
            android:layout_centerInParent="true"
            android:layout_marginTop="30sp"/>

        <Button
            android:layout_width="220sp"
            android:layout_height="50sp"
            android:layout_marginTop="10sp"
            android:layout_gravity="center"
            android:background="@drawable/rounded_button"
            android:text="@string/userInfo"
            android:textColor="@color/offWhite"
            android:textSize="10pt"
            android:fontFamily="@font/hand_type_writer"
            android:id="@+id/userButton"
            android:layout_below="@+id/playButton"
            android:layout_centerInParent="true"/>

        <Button
            android:layout_width="220sp"
            android:layout_height="50sp"
            android:layout_marginTop="10sp"
            android:layout_gravity="center"
            android:background="@drawable/rounded_button"
            android:text="@string/score"
            android:textColor="@color/offWhite"
            android:fontFamily="@font/hand_type_writer"
            android:textSize="10pt"
            android:id="@+id/scoresButton"
            android:layout_below="@+id/userButton"
            android:layout_centerInParent="true"/>


    </RelativeLayout>
</android.support.constraint.ConstraintLayout>