<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameOver">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/halftone_yellow_light"
        android:orientation="vertical">

        <TextView
            android:layout_width="350sp"
            android:layout_height="wrap_content"
            android:text="@string/finalScore"
            android:background="@color/offWhite"
            android:textSize="12pt"
            android:textAlignment="center"
            android:textColor="@color/green"
            android:layout_marginTop="15sp"
            android:layout_centerHorizontal="true"
            android:id="@+id/scoreField"
            android:layout_marginBottom="20sp"
            android:fontFamily="@font/hand_type_writer"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="400sp"
            android:layout_below="@+id/scoreField"
            android:id="@+id/scoreScroll">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="175sp"
                android:layout_height="wrap_content"
                android:text="@string/foundWordsHolder"
                android:background="@color/offWhite"
                android:textSize="10pt"
                android:textAlignment="textStart"
                android:textColor="@color/darkBlue"
                android:id="@+id/allWordsField"
                android:fontFamily="@font/hand_type_writer"
                android:padding="10sp"/>

                <TextView
                    android:layout_width="175sp"
                    android:layout_height="wrap_content"
                    android:text="@string/foundWordsHolder"
                    android:background="@color/offWhite"
                    android:textSize="10pt"
                    android:textAlignment="textEnd"
                    android:textColor="@color/darkBlue"
                    android:id="@+id/allScoresField"
                    android:layout_toEndOf="@+id/allWordsField"
                    android:fontFamily="@font/hand_type_writer"
                    android:padding="10sp"/>

            </RelativeLayout>

        </ScrollView>

        <Button
            android:layout_width="170sp"
            android:layout_height="60sp"
            android:background="@drawable/rounded_button_green"
            android:text="@string/done"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10sp"
            android:textColor="@color/offWhite"
            android:textSize="10pt"
            android:id="@+id/doneButton"
            android:layout_below="@+id/scoreScroll"
            android:fontFamily="@font/hand_type_writer"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/muteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/mute"
            app:backgroundTint="@color/pink"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>